# gstreamer-tutorial

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main10.cpp  main3.cpp  main5.cpp  main7.cpp  main8.cpp  main9.cpp  no-rtpbin-tutorial-1.cpp  no-rtpbin-tutorial-2.cpp  no-rtpbin-tutorial-3.cpp  no-rtpbin-tutorial-5-mp4.cpp  rtpbin-tutorial-1.cpp  rtpbin-tutorial-2.cpp  rtpbin-tutorial-3.cpp  rtpbin-tutorial-4.cpp  rtpbin-tutorial-5-mp4.cpp  video
cpp/: audio.cpp  main.cpp  main2.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  no-rtpbin-tutorial-2.cpp  rtpbin-tutorial-1.cpp  test.cpp
cpp/gio-channel-exaxmple/: CMakeLists.txt  READEME.md  example-1.cpp  example-2.cpp  example-3.cpp  example-4.cpp
cpp/nice-example/: CMakeLists.txt  README.md  example-1.c  nice-example0.cpp  run.sh  sdp-example.cpp  simple-example.cpp
cpp/plugin/: CMakeLists.txt  READEME.md  gstrtpchecker.c  meson.build  plugin-tutorial.cpp
gstreamer-hello/: audio-player.py  playbin-example-audio.py
plugin/: CMakeLists.txt
plugin/tutorial-gobject/: CMakeLists.txt  README.md  animal.c  cat.c  cat.h  dog.c  dog.h  main.c
plugin/tutorial-plugin/: CMakeLists.txt  README.md  gstplugin.c  gstplugin.h  meson.build  my_plugin copy.c  my_plugin copy.h
plugin/tutorial-plugin/filter-element-plugin/: meson.build  my_plugin.c  my_plugin.h
plugin/tutorial-plugin/sink-element-plugin/: animal.h  meson.build
plugin/tutorial-plugin/source-element-plugin/: my_plugin.c  my_plugin.h
promise/: CMakeLists.txt  promise.c
python/Capabilities/: READEME.md  capabilities-example.py  capabilities-resolution-example.py
python/audio-player/: READEME.md  audio-player.py
python/mp3-pipeline/: README.md  mp3-pipeline.py
python/ogg-player/: ogg-player.py
python/rtsp-from-file-server/: rtsp-from-webm-server.py
python/rtsp-server/: READEME.md  README.md  rtsp-server.py
python/samples/: filepath  pipeline-branch-example.py  pipeline-example.py  playbin-example-audio.py  playbin-example-cliplayer.py  playbin-example-video.py  seeking-example.py
python/srtp-example/: READEME.md
python/video-pipeline/: READEME.md  mp4-pipeline-run.py  mp4-pipeline.py  run
python/video-player/: video-player.py
structure/: CMakeLists.txt  README.md  gststructure.c
webrtc/python/: webrtc_server.py
webrtc/python/client-offer-server-answer/: cert.pem  key.pem  run.sh  webrtc_server.py
webrtc/python/client-offer-server-answer/static/: index.html
webrtc/python/server/: app.py  webrtc.dmp  webrtc_server.py
webrtc/python/server-offer-client-answer/: webrtc_server.py
webrtc/python/server-offer-client-answer/static/: index copy.html  index.html  index_org copy.html  index_reverse.html  indextemp.html
webrtc/python/server/static/: index.html
